--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,18 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f2f2f2;
+    background-color: #fbea97;
 }
 
 h1 {
     text-align: center;
     margin-top: 20px;
+}
+
+.container {
+    display: block;
+    max-width: 960px;
+    margin: 0 auto;
 }
 
 .calculator {
@@ -19,14 +25,10 @@ h1 {
     padding: 20px;
 }
 
-.container {
-    display: block;
-    max-width: 960px;
-    margin: 0 auto;
-}
 label {
     display: block;
     margin-bottom: 5px;
+    color: rgb(101, 0, 0);
 }
 
 input[type="number"] {
@@ -40,7 +42,7 @@ input[type="number"] {
 
 button {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #ea3d2e;
     color: white;
     padding: 10px;
     border: none;
@@ -49,7 +51,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: rgb(101, 0, 0);
 }
 
 #results {
