--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "iA Writer Duo", monospace;
     margin: 0;
     padding: 0;
     background-color: #fbea97;
